--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.brandonward.simplecalculator">
 
+    <!-- Required -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.revmob.app.id" android:value="53b5e88de55519520b88ca31"/>
         <activity
+            android:name="com.revmob.ads.fullscreen.FullscreenActivity"
+            android:theme="@android:style/Theme.Translucent"
+            android:configChanges="keyboardHidden|orientation">
             android:name=".MyCalculator"
             android:label="@string/app_name">
             <intent-filter>
