--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
 
     <!-- Required -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.revmob.app.id" android:value="53b5e88de55519520b88ca31"/>
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        <meta-data android:name="com.revmob.app.id" android:value="53b5e88de55519520b88ca31"/>
         <activity
             android:name="com.revmob.ads.fullscreen.FullscreenActivity"
             android:theme="@android:style/Theme.Translucent"
